--- a/SpringCloudPXL/notification-service/pom.xml
+++ b/SpringCloudPXL/notification-service/pom.xml
@@ -7,10 +7,10 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>employee-service</artifactId>
+    <artifactId>notification-service</artifactId>
     <packaging>jar</packaging>
 
-    <name>employee-service</name>
+    <name>notification-service</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -18,5 +18,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
