--- a/SpringCloudPXL/organization-service/src/main/resources/application.properties
+++ b/SpringCloudPXL/organization-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8081
+server.port=8083
 
-spring.datasource.url=jdbc:mysql://localhost:3310/employeeservice_db?useSSL=false&serverTimezone=UCT
+spring.datasource.url=jdbc:mysql://localhost:3312/organizationservice_db?useSSL=false&serverTimezone=UCT
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
