--- a/SpringCloudPXL/discovery-service/pom.xml
+++ b/SpringCloudPXL/discovery-service/pom.xml
@@ -7,10 +7,10 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>employee-service</artifactId>
+    <artifactId>discovery-service</artifactId>
     <packaging>jar</packaging>
 
-    <name>employee-service</name>
+    <name>discovery-service</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -19,28 +19,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>mysql</artifactId>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>1.19.8</version>
-            <scope>test</scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>6.1.13</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>mysql</artifactId>
-            <version>1.19.8</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 </project>
