--- a/SpringCloudPXL/pom.xml
+++ b/SpringCloudPXL/pom.xml
@@ -26,7 +26,8 @@
         <module>department-service</module>
         <module>organization-service</module>
 		<module>notification-service</module>
-	</modules>
+        <module>discovery-service</module>
+    </modules>
     <scm>
 		<connection/>
 		<developerConnection/>
@@ -36,7 +37,15 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers-bom</artifactId>
+			<version>1.17.3</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -61,6 +70,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
