--- a/SpringCloudPXL/notification-service/src/main/resources/application.properties
+++ b/SpringCloudPXL/notification-service/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 server.port=8084
 
-spring.datasource.url=jdbc:mysql://localhost:3313/notificationservice_db?useSSL=false&serverTimezone=UCT
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.application.name=notification-service
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+eureka.client.serviceUrl.defaultZone=http://localhost:8061/eureka/
