--- a/SpringCloudPXL/department-service/pom.xml
+++ b/SpringCloudPXL/department-service/pom.xml
@@ -40,5 +40,9 @@
             <version>1.19.8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
     </dependencies>
 </project>
