--- a/SpringCloudPXL/notification-service/pom.xml
+++ b/SpringCloudPXL/notification-service/pom.xml
@@ -46,5 +46,9 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>3.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
     </dependencies>
 </project>
