--- a/SpringCloudPXL/notification-service/src/main/resources/application.properties
+++ b/SpringCloudPXL/notification-service/src/main/resources/application.properties
@@ -1,7 +1,2 @@
-server.port=8084
-
 spring.application.name=notification-service
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-eureka.client.serviceUrl.defaultZone=http://localhost:8061/eureka/
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8088/}
